frontend/armadacar/armadacar-namespace.yml
apiVersion: v1
kind: Namespace
metadata: 
    name: armadacar
    labels:
        app: armadacar
